# ironbox

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py  test_route_agent.py
docs/: agent_as_tool_wrapping.puml  agent_frameworks.puml  agent_invocation_explanation.md  api_architecture.puml  class_hierarchy.puml  complete_query_flow.puml  database_schema.puml  deployment_architecture.puml  design_document.md  enhanced_architecture_qa.md  enhanced_framework_summary.md  framework_selection.puml  framework_selection_diagram.puml  framework_selection_qa.md  langchain_langgraph_architecture.md  logging.md  mcp_integration.puml  memory_system.puml  multi_agent_architecture_qa.md  overall_architecture.puml  plan_framework_flow.puml  react_framework_flow.puml  route_framework_flow.puml  tool_invocation_sequence.puml  tool_repository.puml  toolkit_and_agent_qa.md  toolkit_structure.puml  toolkit_system_explanation.md  unified_toolkit.puml  unified_toolkit_architecture.md
examples/: use_langchain_framework.py
ironbox/: config.py
ironbox/agents/: cluster_health.py  cluster_info.py  cluster_register.py  llm_agent.py  mcp_agent.py  memory_agent.py
ironbox/api/: routes.py  server.py
ironbox/core/: agent_core.py  agent_framework.py  framework_selector.py  graph.py  (+4 more)
notebooks/: 01_agent_core_and_frameworks.ipynb  02_specialized_agents.ipynb  03_memory_system.ipynb  04_mcp_integration.ipynb  05_kubernetes_integration.ipynb
scripts/: init_db.py  init_db.sql  view_logs.py
tests/: test_agent_frameworks.py  test_agents.py  test_api.py  test_chat.py  test_core.py  test_enhanced_architecture.py  test_import.py  test_langgraph_framework.py  test_llm_agent.py
(+8 files in other folders)
