[project]
name = "ironbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "debugpy>=1.8.13",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "kubernetes>=28.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.0.20",
    "notebook>=7.3.3",
    "ollama>=0.4.7",
    "plotly>=6.0.1",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
    "uvicorn>=0.23.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

